[package]
name = "task_management_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
leptos = { version = "0.6", features = ["nightly", "csr", "serde"] }
leptos_axum = { version = "0.6" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
dotenvy = "0.15"
bcrypt = "0.10"
jsonwebtoken = "0.16"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
